--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-screens": "^4.11.1",
     "expo-image-picker": "~16.1.4",
     "expo-sharing": "~13.1.5",
-    "expo-file-system": "~18.1.10"
+    "expo-file-system": "~18.1.10",
+    "expo-dev-client": "~5.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
